sas-core/main/default/objects/Airport__c/Airport__c.object-meta.xml
<CustomObject>
    <description>Information about an airport fetched from TEDS. Contains info about the name and location.</description>
    <label>Airport</label>
    <nameField>
        <label>Airport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>