sas-core/main/default/objects/Airport__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The city the airport is located in.</description>
    <inlineHelpText>The city the airport is located in.</inlineHelpText>
    <label>City</label>
    <length>58</length>
    <type>Text</type>
</CustomField>