sas-core/main/default/objects/Airport__c/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <description>The country code of the country the airport is located in.</description>
    <inlineHelpText>The country code of the country the airport is located in.</inlineHelpText>
    <label>Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>