sas-core/main/default/objects/Airport__c/fields/Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Country_Name__c</fullName>
    <description>The country the airport is located in.</description>
    <inlineHelpText>The country the airport is located in.</inlineHelpText>
    <label>Country Name</label>
    <length>56</length>
    <type>Text</type>
</CustomField>