sas-core/main/default/objects/Airport__c/fields/Is_EU261_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Is_EU261_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Asserts whether the airport is within the territory of the European Union or in Norway, Switzerland or Iceland.</description>
    <inlineHelpText>Asserts whether the airport is within the territory of the European Union or in Norway, Switzerland or Iceland.</inlineHelpText>
    <label>Is EU261 Applicable</label>
    <type>Checkbox</type>
</CustomField>