sas-core/main/default/objects/Airport__c/fields/Is_In_European_Union__c.field-meta.xml
<CustomField>
    <fullName>Is_In_European_Union__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A boolean which asserts whether the airport is within the territory of a country which is part of the european union.</description>
    <inlineHelpText>A boolean which asserts whether the airport is within the territory of a country which is part of the european union.</inlineHelpText>
    <label>Is In European Union</label>
    <type>Checkbox</type>
</CustomField>