sas-core/main/default/objects/Airport__c/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <description>The latitude of the airport.</description>
    <inlineHelpText>The latitude of the airport.</inlineHelpText>
    <label>Latitude</label>
    <precision>14</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>