sas-core/main/default/objects/Airport__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <description>The longitude of the airport.</description>
    <inlineHelpText>The longitude of the airport.</inlineHelpText>
    <label>Longitude</label>
    <precision>14</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>