sas-core/main/default/objects/Airport__c/fields/TEDS_Identifier__c.field-meta.xml
<CustomField>
    <fullName>TEDS_Identifier__c</fullName>
    <description>The IATA Airport identifier.</description>
    <externalId>true</externalId>
    <inlineHelpText>The IATA Airport identifier.</inlineHelpText>
    <label>TEDS_Identifier</label>
    <length>3</length>
    <type>Text</type>
</CustomField>